# AtomOS

./: Cargo.toml  README.md
.cargo/: config.toml
atom_os_boot/: Cargo.toml
atom_os_boot/src/: main.rs
src/: exit_qemu.rs  fb_logger.rs  gdt.rs  init.rs  interrupts.rs  main.rs  panic_handler.rs  serial.rs  test.rs  vga_buffer.rs
src/test/: mod.rs  tests.rs
