[package]
name = "atom_os"
version = "0.1.0"
edition = "2021"
authors = ["LukasDoesDev <lukasdoesdev@gmail.com>"]

[dependencies]
# TODO: Upgrade volatile
bootloader = "0.10.11" # haha bootloader go brr
volatile = "0.3.0"
spin = "0.9.2" # for std::sync alternative
uart_16550 = "0.2.16" # for serial connections
x86_64 = "0.14.7" # x86_64 instructions but in Rust

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[workspace]
members = [
    "atom_os_boot",
]

# TODO: Figure out how to use mold or lld with this
