[package]
name = "atom_os"
version = "0.1.0"
edition = "2021"
authors = ["LukasDoesDev <lukasdoesdev@gmail.com>"]

[dependencies]
# TODO: Upgrade volatile
volatile = "0.3.0"
spin = "0.9.2" # std::sync alternative
uart_16550 = "0.2.16" # serial connections
x86_64 = "0.14.7" # x86_64 instructions but in Rust
noto-sans-mono-bitmap = "0.1.5" # logging to the framebuffer
spinning_top = "0.2.4" # spinlock

[dependencies.conquer-once]
# OnceCell
version = "0.3.2"
default-features = false

[dependencies.bootloader]
# haha bootloader go brr
version = "0.10.11"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[workspace]
members = [
    "atom_os_boot",
]

# TODO: Figure out how to use mold or lld with this
